[package]
name = "myrust"
version = "0.1.1"
edition = "2021"

[dependencies]
etcd-client = "0.14.0"
jwt = "0.16.0"
mac_address = "1.1.7"
pin-project = "1.1.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_yaml = "0.9.34"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
mime = "0.3.17"
reqwest = "0.12.7"
reqwest-middleware = "0.3.3"
http = "1.1.0"
async-trait = "0.1.82"
actix-web = "4.9.0"
bytes = "1.7.1"
actix-http = "3.9.0"
http-body-util = "0.1.2"
hyper = "1.4.1"

[features]
default = [
    "tracing",
    "config",
    "http-reqwest",
    "http-tracer",
    "full"
]
full = [
    "tracing",
    "util",
    "http",
    "lark-api",
]
util = [
    "id-gen",
    "etcd-client-sync",
    "env",
    "config",
]
id-gen = []
etcd-client-sync = []
env = []
tracing = [
    "id-gen",
    "env",
]
config = []
http = [
    "http-jwt",
    "http-reqwest",
    "http-tracer",
]
http-jwt = []
http-reqwest = [
    "tracing"
]
http-tracer = []
lark-api = [
    "http-reqwest"
]
