[package]
name = "myrust"
version = "0.1.12"
edition = "2021"

[dependencies.futures]
version = "0.3.31"
default-features = false
optional = true

[dependencies.derive_builder]
version = "0.20.2"
default-features = false
optional = true

[dependencies.url]
version = "2.5.2"
optional = true
default-features = false

[dependencies.hyper]
version = "1.4.1"
optional = true
default-features = false

[dependencies.http-body-util]
version = "0.1.2"
optional = true
default-features = false

[dependencies.actix-http]
version = "3.9.0"
optional = true
default-features = false

[dependencies.bytes]
version = "1.7.1"
optional = true
default-features = false

[dependencies.actix-web]
version = "4.9.0"
optional = true
default-features = false

[dependencies.async-trait]
version = "0.1.82"
optional = true
default-features = false

[dependencies.http]
version = "1.1.0"
optional = true
default-features = false

[dependencies.reqwest-middleware]
version = "0.3.3"
optional = true
default-features = false

[dependencies.reqwest]
version = "0.12.7"
optional = true
default-features = false

[dependencies.mime]
version = "0.3.17"
optional = true
default-features = false

[dependencies.tracing]
version = "0.1.40"
optional = true
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.18"
optional = true
default-features = false
features = ["fmt", "env-filter", "ansi"]

[dependencies.toml]
version = "0.8.19"
optional = true
default-features = false
features = ["parse"]

[dependencies.tokio]
version = "1.40.0"
optional = true
default-features = false

[dependencies.thiserror]
version = "1.0.63"
optional = true
default-features = false

[dependencies.serde_yaml]
version = "0.9.34"
optional = true
default-features = false

[dependencies.serde_json]
version = "1.0.127"
optional = true
default-features = false
features = ["std"]

[dependencies.serde]
version = "1.0.209"
optional = true
default-features = false
features = ["derive"]

[dependencies.pin-project]
version = "1.1.5"
optional = true
default-features = false

[dependencies.mac_address]
version = "1.1.7"
optional = true
default-features = false

[dependencies.jwt]
version = "0.16.0"
optional = true
default-features = false

[dependencies.etcd-client]
version = "0.14.0"
optional = true
default-features = false

[features]
default = [
    "tracing",
    "config",
    "http-client",
    "http-server-tracer",
]
full = [
    "tracing",
    "util",
    "http",
    "lark-api",
]
util = [
    "id-gen",
    "etcd-client-sync",
    "env",
    "config",
]
id-gen = [
    "dep:mac_address",
]
etcd-client-sync = [
    "dep:etcd-client",
    "dep:thiserror",
    "dep:tokio",
]
env = []
tracing = [
    "id-gen",
    "env",
    "dep:serde_json",
    "dep:tracing",
    "dep:tracing-subscriber",
]
config = [
    "dep:serde",
    "dep:serde_json",
    "dep:etcd-client",
    "dep:serde_yaml",
    "dep:toml",
    "dep:thiserror",
    "dep:futures",
    "dep:pin-project",
]
http = [
    "http-client",
    "http-server",
]
http-server = [
    "http-jwt",
    "http-server-tracer",
    "http-server-data",
]
http-jwt = [
    "dep:async-trait",
    "dep:actix-web",
    "dep:jwt",
    "dep:serde",
    "dep:serde_json",
    "dep:thiserror",
    "dep:pin-project",
]
http-client = [
    "tracing",
    "dep:async-trait",
    "dep:reqwest",
    "dep:reqwest-middleware",
    "dep:http",
    "dep:hyper",
    "dep:http-body-util",
]
http-server-tracer = [
    "dep:actix-web",
    "dep:actix-http",
    "dep:mime",
    "dep:bytes",
    "dep:pin-project",
    "dep:tracing",
]
http-server-data = [
    "dep:tokio",
    "dep:actix-web",
]
lark-api = [
    "reqwest-middleware/json",
    "reqwest/rustls-tls",
    "dep:http",
    "dep:thiserror",
    "dep:url",
    "dep:serde",
    "dep:serde_json",
    "dep:derive_builder",
    "dep:tokio",
]
lark-api-event = [
    "lark-api",
    "actix-web/macros",
    "dep:async-trait",
    "http-server-data",
]
